--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
   "scripts": {
     "build": "cd client && yarn install && yarn build",
     "deploy": "cp -a client/build/. public/",
-    "heroku-postbuild": "yarn build && yarn deploy"
-  }
+    "heroku-postbuild": "yarn build && yarn deploy",
+    "start": "foreman start -f Procfile.dev"
+  },
+  "dependencies": {}
 }
